--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "geist": "^1.3.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
+    "next-themes": "^0.4.4",
     "postcss": "8.4.30",
     "postgres": "^3.4.4",
     "prettier": "^3.3.2",
