--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@types/eslint": "^8.56.10",
     "@types/leaflet": "^1.9.8",
     "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "@types/react-leaflet": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
@@ -64,8 +64,8 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^0.2.1",
-    "date-fns": "^3.3.1",
+    "cmdk": "1.0.0",
+    "date-fns": "^4.1.0",
     "drizzle-kit": "^0.24.0",
     "drizzle-orm": "^0.33.0",
     "eslint": "^8.57.0",
@@ -81,6 +81,7 @@
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.50.1",
     "react-leaflet": "^4.2.1",
