feat: add markdown rendering and custom 404 page; update package dependencies

--- a/package.json
+++ b/package.json
@@ -86,6 +86,9 @@
     "react-hook-form": "^7.50.1",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
     "shadcn": "^2.1.6",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.5.5",
