--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-google-maps/api": "^2.20.3",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/eslint": "^8.56.10",
@@ -75,6 +76,7 @@
     "eslint-plugin-drizzle": "^0.2.3",
     "framer-motion": "^11.0.3",
     "geist": "^1.3.0",
+    "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.4.4",
