--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slider": "^1.1.2",
@@ -58,6 +58,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/react-leaflet": "^3.0.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "@vercel/analytics": "^1.2.2",
@@ -90,9 +91,13 @@
     "react-hook-form": "^7.50.1",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
+    "react-resizable-panels": "^2.1.7",
+    "react-syntax-highlighter": "^15.5.11",
+    "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "shadcn": "^2.1.6",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.5.5",
