--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
+    "@uploadthing/react": "^7.1.5",
     "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.15",
@@ -104,7 +105,7 @@
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.3",
-    "uploadthing": "^7.4.0",
+    "uploadthing": "^7.4.4",
     "zod": "^3.23.3"
   },
   "ct3aMetadata": {
