--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-hook-form": "^7.50.1",
     "react-leaflet": "^4.2.1",
     "react-markdown": "^9.0.1",
+    "react-multi-carousel": "^2.8.5",
     "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "^15.5.11",
     "rehype-katex": "^7.0.1",
