--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@
 # Drizzle
 POSTGRES_URL="postgresql://postgres:password@localhost:5432/bakonykuti-t3"
 
+# NextAuth.js
+AUTH_SECRET="your-auth-secret" # Generate with: openssl rand -base64 32
+NEXTAUTH_URL="http://localhost:3000"
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
