--- a/package.json
+++ b/package.json
@@ -20,94 +20,99 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.8.0",
-    "@hookform/resolvers": "^3.9.0",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-context-menu": "^2.1.5",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-hover-card": "^1.0.7",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-menubar": "^1.0.4",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-radio-group": "^1.1.3",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slider": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-toggle": "^1.0.3",
-    "@radix-ui/react-toggle-group": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.7",
-    "@react-google-maps/api": "^2.20.3",
+    "@auth/drizzle-adapter": "^1.9.1",
+    "@hookform/resolvers": "^3.10.0",
+    "@radix-ui/react-accordion": "^1.2.10",
+    "@radix-ui/react-alert-dialog": "^1.1.13",
+    "@radix-ui/react-aspect-ratio": "^1.1.6",
+    "@radix-ui/react-avatar": "^1.1.9",
+    "@radix-ui/react-checkbox": "^1.3.1",
+    "@radix-ui/react-collapsible": "^1.1.10",
+    "@radix-ui/react-context-menu": "^2.2.14",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
+    "@radix-ui/react-hover-card": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-menubar": "^1.1.14",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-progress": "^1.1.6",
+    "@radix-ui/react-radio-group": "^1.3.6",
+    "@radix-ui/react-scroll-area": "^1.2.8",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.6",
+    "@radix-ui/react-slider": "^1.3.4",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-toast": "^1.2.13",
+    "@radix-ui/react-toggle": "^1.1.8",
+    "@radix-ui/react-toggle-group": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.6",
+    "@react-google-maps/api": "^2.20.6",
     "@t3-oss/env-nextjs": "^0.10.1",
-    "@tailwindcss/typography": "^0.5.10",
-    "@types/eslint": "^8.56.10",
-    "@types/leaflet": "^1.9.8",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/eslint": "^8.56.12",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "20.6.2",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.21",
+    "@types/react-dom": "^18.3.7",
     "@types/react-leaflet": "^3.0.0",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@typescript-eslint/eslint-plugin": "^8.1.0",
-    "@typescript-eslint/parser": "^8.1.0",
-    "@uploadthing/react": "^7.1.5",
-    "@vercel/analytics": "^1.2.2",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "@uploadthing/react": "^7.3.1",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.15",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "drizzle-kit": "^0.29.1",
     "drizzle-orm": "^0.37.0",
-    "embla-carousel-react": "^8.5.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.1",
+    "embla-carousel-react": "^8.6.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^15.3.2",
     "eslint-plugin-drizzle": "^0.2.3",
-    "framer-motion": "^11.0.3",
-    "geist": "^1.3.0",
+    "framer-motion": "^11.18.2",
+    "geist": "^1.4.2",
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
-    "next-themes": "^0.4.4",
+    "next-auth": "^5.0.0-beta.28",
+    "next-themes": "^0.4.6",
     "postcss": "8.4.30",
-    "postgres": "^3.4.4",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
+    "postgres": "^3.4.5",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.56.3",
     "react-leaflet": "^4.2.1",
-    "react-markdown": "^9.0.1",
-    "react-multi-carousel": "^2.8.5",
-    "react-resizable-panels": "^2.1.7",
-    "react-syntax-highlighter": "^15.5.11",
+    "react-markdown": "^9.1.0",
+    "react-multi-carousel": "^2.8.6",
+    "react-resizable-panels": "^2.1.9",
+    "react-syntax-highlighter": "^15.6.1",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
-    "shadcn": "^2.1.6",
-    "sharp": "^0.33.2",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^3.4.3",
+    "shadcn": "^2.5.0",
+    "sharp": "^0.33.5",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.5.3",
-    "uploadthing": "^7.4.4",
-    "zod": "^3.23.3"
+    "typescript": "^5.8.3",
+    "uploadthing": "^7.7.2",
+    "uuid": "^11.1.0",
+    "zod": "^3.24.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.38.1"
