Migrated Database to mariadb, (WIP)

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@
 # should be updated accordingly.
 
 # Drizzle
-POSTGRES_URL="postgresql://postgres:password@localhost:5432/bakonykuti-t3"
+MARIADB_PASSWORD="your-mariadb-password"
 
 # NextAuth.js
 AUTH_SECRET="your-auth-secret" # Generate with: openssl rand -base64 32
