--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
+    "db:migrate-to-mariadb": "bun scripts/migrate-to-mariadb.ts",
+    "db:migrate-data": "bun scripts/migrate-data-to-mariadb.ts",
+    "db:test-connection": "bun scripts/test-mariadb-connection.ts",
+    "db:create-mariadb-database": "bun scripts/create-mariadb-database.ts",
+    "db:create-mariadb-tables": "bun scripts/create-mariadb-tables.ts",
+    "db:test-direct-connection": "bun scripts/test-direct-mariadb-connection.ts",
+    "db:complete-migration": "bun scripts/complete-mariadb-migration.ts",
     "dev": "next dev --turbo",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -84,6 +91,7 @@
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
+    "mysql2": "^3.9.2",
     "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.6",
     "postcss": "8.4.30",
