Add Docker support with deployment guide, configuration, and database integration
- Create Dockerfile and docker-compose files for development and production
- Add .dockerignore and update .gitignore for Docker compatibility
- Implement database connection using Drizzle ORM with MariaDB
- Enhance authentication with NextAuth.js and improve session handling
- Add error handling for fetching carousel images in layout
- Introduce mock database for build time to avoid connection issues
- Update package.json with new scripts for Docker commands

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "next build",
+    "build:standalone": "bun scripts/build-standalone.js",
     "check": "next lint && tsc --noEmit",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -22,9 +23,16 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
+    "start:standalone": "node .next/standalone/server.js",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "docker:build": "bun run build:standalone && docker-compose build",
+    "docker:start": "docker-compose up -d",
+    "docker:stop": "docker-compose down",
+    "docker:dev": "docker-compose up -d",
+    "docker:prod": "docker-compose -f docker-compose.yml up -d",
+    "docker:logs": "docker-compose logs -f"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.9.1",
@@ -56,7 +64,7 @@
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
-    
+
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^3.0.0",
