feat: Implement file upload components and utilities
- Added ImageUpload component for handling image uploads with drag-and-drop support.
- Introduced UploadButton component for simplified file uploads with endpoint configurations.
- Created index file to export file upload components and types.
- Developed CSV migration utilities for exporting and importing database tables.
- Implemented file management utilities for handling local file operations.
- Established file upload validation and processing logic.
- Added local upload utilities to provide a compatible interface for existing components.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "db:create-mariadb-tables": "bun scripts/create-mariadb-tables.ts",
     "db:test-direct-connection": "bun scripts/test-direct-mariadb-connection.ts",
     "db:complete-migration": "bun scripts/complete-mariadb-migration.ts",
+    "db:enhanced-migration": "bun scripts/enhanced-mariadb-migration.ts",
+    "db:verify-state": "bun scripts/verify-database-state.ts",
+    "db:export-to-csv": "bun scripts/export-data-to-csv.ts",
+    "db:import-from-csv": "bun scripts/import-data-from-csv.ts",
+    "db:test-csv-migration": "bun scripts/test-csv-migration.ts",
     "dev": "next dev --turbo",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -64,7 +69,6 @@
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
-
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^3.0.0",
@@ -86,6 +90,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
+    "csv-parser": "^3.2.0",
+    "csv-writer": "^1.6.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "drizzle-kit": "^0.29.1",
@@ -96,7 +102,6 @@
     "eslint-plugin-drizzle": "^0.2.3",
     "framer-motion": "^11.18.2",
     "geist": "^1.4.2",
-
     "leaflet": "^1.9.4",
     "lucide-react": "^0.462.0",
     "mysql2": "^3.9.2",
