feat: Implement CSV data import and migration scripts for MariaDB
- Added import-data-from-csv.ts to handle importing data from CSV files into MariaDB.
- Created migrate-data-to-mariadb.ts for exporting data from PostgreSQL and importing it into MariaDB.
- Introduced migrate-to-mariadb.ts to create necessary tables in MariaDB.
- Developed simple-verification.ts for basic database verification.
- Added start-database.sh script to facilitate starting a Docker container for local development.
- Implemented test-csv-migration.ts to test CSV utility functions and validation.
- Created test-direct-mariadb-connection.ts for testing direct connections to MariaDB.
- Added test-mariadb-connection.ts to verify connections using Drizzle ORM.
- Implemented test-new-columns.ts to check for new columns in the images table.
- Developed test-user-auth.ts to test user authentication functionality.
- Created verify-database-state.ts for comprehensive database state verification.
- Updated env.mjs to include environment variables for MariaDB configuration.

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,12 @@
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
-# Drizzle
+# MariaDB Connection Settings
+MARIADB_HOST=localhost
+MARIADB_PORT=3306
+MARIADB_USER=root
 MARIADB_PASSWORD="your-mariadb-password"
+MARIADB_DATABASE=bakonykuti-mariadb
 
 # NextAuth.js
 AUTH_SECRET="your-auth-secret" # Generate with: openssl rand -base64 32
