feat: Add environment setup script and OpenWeatherMap API key to .env.example; refactor Providers component with error handling

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ MARIADB_DATABASE=bakonykuti-mariadb
 AUTH_SECRET="your-auth-secret" # Generate with: openssl rand -base64 32
 NEXTAUTH_URL="http://localhost:3000"
 
+# OpenWeatherMap API Key (for weather features)
+OPENWEATHERMAP_API_KEY="your-openweathermap-api-key"
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
