--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "docker:prod": "docker-compose -f docker-compose.yml up -d",
     "docker:logs": "docker-compose logs -f",
     "setup:env": "node scripts/setup-env.js",
-    "test:db": "node scripts/test-db-connection.js"
+    "test:db": "node scripts/test-db-connection.js",
+    "check:gallery": "node scripts/check-gallery-images.js",
+    "check:db": "node scripts/check-database-structure.js"
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.9.1",
