--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,33 @@ services:
       - NODE_ENV=production
       - MARIADB_PASSWORD=${MARIADB_PASSWORD}
       - AUTH_SECRET=${AUTH_SECRET}
-      - NEXTAUTH_URL=${NEXTAUTH_URL:-http://localhost:3000}
+      - NEXTAUTH_URL=${NEXTAUTH_URL:-https://your-domain.com}
       - SKIP_ENV_VALIDATION=1
       - HOSTNAME=0.0.0.0
-      # Add host network to access the host's localhost
-    network_mode: "host"
+    networks:
+      - app-network
 
-# No volumes or networks needed since we're using the host network
+  nginx:
+    image: nginx:alpine
+    restart: always
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt:/etc/letsencrypt:ro
+    depends_on:
+      - app
+    networks:
+      - app-network
+
+  certbot:
+    image: certbot/certbot
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
+      - /var/www/certbot:/var/www/certbot
+    command: certonly --webroot --webroot-path=/var/www/certbot --email your-email@domain.com --agree-tos --no-eff-email -d your-domain.com -d www.your-domain.com
+
+networks:
+  app-network:
+    driver: bridge
