Add database backup, export, and import utilities
- Implemented a comprehensive database backup and restore utility in `database-backup-utility.ts`.
- Created a complete database export script in `export-database.ts` to handle schema and data exports.
- Developed a database import script in `import-database.ts` for restoring databases from backup files.
- Enhanced error handling and user prompts for better usability.
- Added support for environment variable configuration and restore scripts.
- Included functionality for compressing backup files and generating backup info.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "db:test-connection": "bun scripts/test-mariadb-connection.ts",
     "db:create-mariadb-database": "bun scripts/create-mariadb-database.ts",
     "db:create-mariadb-tables": "bun scripts/create-mariadb-tables.ts",
+    "db:backup": "bun scripts/database-backup-native.ts backup",
+    "db:restore": "bun scripts/database-backup-native.ts restore",
+    "db:backup-list": "bun scripts/database-backup-native.ts list",
+    "db:backup-info": "bun scripts/database-backup-native.ts info",
     "db:test-direct-connection": "bun scripts/test-direct-mariadb-connection.ts",
     "db:complete-migration": "bun scripts/complete-mariadb-migration.ts",
     "db:enhanced-migration": "bun scripts/enhanced-mariadb-migration.ts",
