feat: Implement database configuration, backup, and restore scripts
- Added `database-config.ts` for managing database configurations across environments.
- Introduced `enhanced-backup.ts` for creating comprehensive database backups with options for schema, data, and compression.
- Developed `enhanced-restore.ts` for restoring databases from backups with validation and rollback capabilities.
- Included CLI interfaces for all scripts to facilitate usage and provide clear command options.
- Enhanced error handling and logging throughout the scripts for better debugging and user feedback.

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,13 @@ yarn-error.log*
 .env
 .env*.local
 
+# database configuration files (contain passwords)
+config/database.*.json
+
+# csv exports and test data
+csv-exports/
+test-csv/
+
 # vercel
 .vercel
 
