--- a/package.json
+++ b/package.json
@@ -24,6 +24,13 @@
     "db:backup-list": "bun scripts/database-backup-native.ts list",
     "db:backup-info": "bun scripts/database-backup-native.ts info",
     "db:test": "bun scripts/test-backup-restore.ts",
+    "db:config": "bun scripts/database-config.ts",
+    "db:config-test": "bun scripts/database-config.ts test",
+    "db:backup-enhanced": "bun scripts/enhanced-backup.ts",
+    "db:restore-enhanced": "bun scripts/enhanced-restore.ts",
+    "db:csv-export": "bun scripts/csv-export-import.ts export",
+    "db:csv-import": "bun scripts/csv-export-import.ts import",
+    "db:backup-manager": "bun scripts/backup-manager.ts",
     "db:diagnose": "bun scripts/diagnose-database-connection.ts",
     "db:test-direct-connection": "bun scripts/test-direct-mariadb-connection.ts",
     "db:complete-migration": "bun scripts/complete-mariadb-migration.ts",
